c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/incompatible_elem_type_static_compound_init.c
// invalid implicit conversion of double 1.0 to type int *
int *arr[3] = {0, 0, 1.0};

int main(void)
{
    return 0;
}